// Vitest Snapshot v1

exports[`Tag > Tag baseVue demo works fine 1`] = `
<div
  data-v-307c55f7=""
>
  <div
    class="tag-demo"
    data-v-307c55f7=""
  >
    <t-tag
      data-v-307c55f7=""
    >
      标签一
    </t-tag>
    <a
      data-v-307c55f7=""
      href="https://www.tencent.com/zh-cn"
      target="_blank"
    >
      <t-tag
        data-v-307c55f7=""
      >
        超链接
      </t-tag>
    </a>
  </div>
  <div
    class="tag-demo"
    data-v-307c55f7=""
  >
    <t-tag
      data-v-307c55f7=""
      theme="primary"
    >
      标签一
    </t-tag>
    <t-tag
      data-v-307c55f7=""
      theme="success"
    >
      标签二
    </t-tag>
    <t-tag
      data-v-307c55f7=""
      theme="warning"
    >
      标签三
    </t-tag>
    <t-tag
      data-v-307c55f7=""
      theme="danger"
    >
      标签四
    </t-tag>
  </div>
  <div
    class="tag-demo light"
    data-v-307c55f7=""
  >
    <t-tag
      data-v-307c55f7=""
      theme="primary"
      variant="light"
    >
      标签一
    </t-tag>
    <t-tag
      data-v-307c55f7=""
      theme="success"
      variant="light"
    >
      标签二
    </t-tag>
    <t-tag
      data-v-307c55f7=""
      theme="warning"
      variant="light"
    >
      标签三
    </t-tag>
    <t-tag
      data-v-307c55f7=""
      theme="danger"
      variant="light"
    >
      标签四
    </t-tag>
  </div>
  <div
    class="tag-demo"
    data-v-307c55f7=""
  >
    <t-tag
      data-v-307c55f7=""
      theme="primary"
      variant="outline"
    >
      标签一
    </t-tag>
    <t-tag
      data-v-307c55f7=""
      theme="success"
      variant="outline"
    >
      标签二
    </t-tag>
    <t-tag
      data-v-307c55f7=""
      theme="warning"
      variant="outline"
    >
      标签三
    </t-tag>
    <t-tag
      data-v-307c55f7=""
      theme="danger"
      variant="outline"
    >
      标签四
    </t-tag>
  </div>
</div>
`;

exports[`Tag > Tag deleteVue demo works fine 1`] = `
<div
  class="tag-demo"
  data-v-48c2675e=""
>
  <div
    class="tag-block"
    data-v-48c2675e=""
  >
    <t-tag
      closable=""
      data-v-48c2675e=""
      theme="primary"
    >
      标签一
    </t-tag>
    <t-tag
      closable=""
      data-v-48c2675e=""
      theme="success"
    >
      标签二
    </t-tag>
    <t-tag
      closable=""
      data-v-48c2675e=""
      theme="warning"
    >
      标签三
    </t-tag>
    <t-tag
      closable=""
      data-v-48c2675e=""
      theme="danger"
    >
      标签四
    </t-tag>
  </div>
  <div
    class="tag-block light"
    data-v-48c2675e=""
  >
    <t-tag
      closable=""
      data-v-48c2675e=""
      theme="primary"
      variant="light"
    >
      标签一
    </t-tag>
    <t-tag
      closable=""
      data-v-48c2675e=""
      theme="success"
      variant="light"
    >
      标签二
    </t-tag>
    <t-tag
      closable=""
      data-v-48c2675e=""
      theme="warning"
      variant="light"
    >
      标签三
    </t-tag>
    <t-tag
      closable=""
      data-v-48c2675e=""
      theme="danger"
      variant="light"
    >
      标签四
    </t-tag>
  </div>
  <div
    class="tag-block"
    data-v-48c2675e=""
  >
    <t-tag
      closable=""
      data-v-48c2675e=""
      theme="primary"
      variant="outline"
    >
      标签一
    </t-tag>
    <t-tag
      closable=""
      data-v-48c2675e=""
      theme="success"
      variant="outline"
    >
      标签二
    </t-tag>
    <t-tag
      closable=""
      data-v-48c2675e=""
      theme="warning"
      variant="outline"
    >
      标签三
    </t-tag>
    <t-tag
      closable=""
      data-v-48c2675e=""
      theme="danger"
      variant="outline"
    >
      标签四
    </t-tag>
  </div>
  <div
    class="tag-block"
    data-v-48c2675e=""
  >
    <t-tag
      closable="true"
      data-v-48c2675e=""
      maxwidth="100"
      theme="default"
    >
       可删除标签可删除标签 
    </t-tag>
    <t-tag
      closable="true"
      data-v-48c2675e=""
      icon="() => h(\\"discount-icon\\")"
      maxwidth="100"
      theme="default"
    >
       可删除标签可删除标签 
    </t-tag>
    <t-tag
      closable="true"
      data-v-48c2675e=""
      disabled="true"
      theme="default"
    >
       可删除标签 
    </t-tag>
  </div>
  <div
    class="tag-block editable"
    data-v-48c2675e=""
  >
    <t-tag
      data-v-48c2675e=""
    >
      <svg
        class="t-icon t-icon-add"
        data-v-48c2675e=""
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          data-v-48c2675e=""
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
       添加标签 
    </t-tag>
  </div>
</div>
`;

exports[`Tag > Tag disabledVue demo works fine 1`] = `
<div
  class="tdesign-tag-disabled tag-demo"
  data-v-be58f5bc=""
>
  <t-check-tag
    class="check-tag"
    data-v-be58f5bc=""
    disabled=""
  >
    失效标签
  </t-check-tag>
  <t-tag
    data-v-be58f5bc=""
    disabled=""
  >
    失效标签
  </t-tag>
</div>
`;

exports[`Tag > Tag iconVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <t-tag
      icon="function () { [native code] }"
    >
      默认标签
    </t-tag>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <t-tag>
       Icon插槽 
    </t-tag>
  </div>
</div>
`;

exports[`Tag > Tag longTextVue demo works fine 1`] = `
<div
  class="tdesign-tag-ellipsis"
>
  <t-tag
    max-width="150"
    title="默认超八个字超长文本标签超长省略文本标签"
  >
    默认超八个字超长文本标签超长省略文本标签
  </t-tag>
</div>
`;

exports[`Tag > Tag plainVue demo works fine 1`] = `
<div
  class="tdesign-tag-outline"
>
  <t-tag
    theme="primary"
    variant="outline"
  >
    标签一
  </t-tag>
  <t-tag
    theme="success"
    variant="outline"
  >
    标签二
  </t-tag>
  <t-tag
    theme="default"
    variant="outline"
  >
    标签三
  </t-tag>
  <t-tag
    theme="warning"
    variant="outline"
  >
    标签四
  </t-tag>
  <t-tag
    theme="danger"
    variant="outline"
  >
    标签五
  </t-tag>
</div>
`;

exports[`Tag > Tag selectableVue demo works fine 1`] = `
<div
  class="tag-demo"
  data-v-4f896e7c=""
>
  <t-check-tag
    data-v-4f896e7c=""
    defaultchecked="true"
  >
     选中 
  </t-check-tag>
  <t-check-tag
    data-v-4f896e7c=""
  >
     未选 
  </t-check-tag>
  <t-check-tag
    data-v-4f896e7c=""
    disabled="true"
  >
     禁用 
  </t-check-tag>
</div>
`;

exports[`Tag > Tag shapeVue demo works fine 1`] = `
<div
  data-v-2785032a=""
>
  <div
    class="tag-demo"
    data-v-2785032a=""
  >
    <t-tag
      data-v-2785032a=""
    >
      标签一
    </t-tag>
    <t-tag
      data-v-2785032a=""
      theme="primary"
    >
      标签一
    </t-tag>
  </div>
  <div
    class="tag-demo"
    data-v-2785032a=""
  >
    <t-tag
      data-v-2785032a=""
      shape="round"
    >
      标签一
    </t-tag>
    <t-tag
      data-v-2785032a=""
      shape="round"
      theme="primary"
    >
      标签一
    </t-tag>
  </div>
  <div
    class="tag-demo"
    data-v-2785032a=""
  >
    <t-tag
      data-v-2785032a=""
      shape="mark"
    >
      标签一
    </t-tag>
    <t-tag
      data-v-2785032a=""
      shape="mark"
      theme="primary"
    >
      标签一
    </t-tag>
  </div>
</div>
`;

exports[`Tag > Tag sizeVue demo works fine 1`] = `
<div
  class="tag-demo"
  data-v-6cd7d1b2=""
>
  <t-tag
    data-v-6cd7d1b2=""
    size="small"
  >
    小型标签
  </t-tag>
  <t-tag
    data-v-6cd7d1b2=""
  >
    默认标签
  </t-tag>
  <t-tag
    data-v-6cd7d1b2=""
    size="large"
  >
    大型标签
  </t-tag>
</div>
`;

exports[`Tag > Tag themeVue demo works fine 1`] = `
<div
  class="tdesign-tag-theme"
  data-v-4efc5093=""
>
  <div
    class="tdesign-demo-block"
    data-v-4efc5093=""
  >
     深色 
    <t-tag
      data-v-4efc5093=""
      theme="primary"
    >
      标签一
    </t-tag>
    <t-tag
      data-v-4efc5093=""
      theme="success"
    >
      标签二
    </t-tag>
    <t-tag
      data-v-4efc5093=""
      theme="warning"
    >
      标签三
    </t-tag>
    <t-tag
      data-v-4efc5093=""
      theme="danger"
    >
      标签四
    </t-tag>
  </div>
  <div
    class="tdesign-demo-block light"
    data-v-4efc5093=""
  >
     浅色 
    <t-tag
      data-v-4efc5093=""
      theme="primary"
      variant="light"
    >
      标签一
    </t-tag>
    <t-tag
      data-v-4efc5093=""
      theme="success"
      variant="light"
    >
      标签二
    </t-tag>
    <t-tag
      data-v-4efc5093=""
      theme="warning"
      variant="light"
    >
      标签三
    </t-tag>
    <t-tag
      data-v-4efc5093=""
      theme="danger"
      variant="light"
    >
      标签四
    </t-tag>
  </div>
  <div
    class="tdesign-demo-block plain"
    data-v-4efc5093=""
  >
     朴素 
    <t-tag
      data-v-4efc5093=""
      theme="primary"
      variant="outline"
    >
      标签一
    </t-tag>
    <t-tag
      data-v-4efc5093=""
      theme="success"
      variant="outline"
    >
      标签二
    </t-tag>
    <t-tag
      data-v-4efc5093=""
      theme="warning"
      variant="outline"
    >
      标签三
    </t-tag>
    <t-tag
      data-v-4efc5093=""
      theme="danger"
      variant="outline"
    >
      标签四
    </t-tag>
  </div>
</div>
`;
